<resources>
    <string name="app_name">Xiangqi Online</string>
    <string name="signin_title">Inicio de sesión</string>
    <string name="signin_email">E-mail</string>
    <string name="signin_pass">Contraseña</string>
    <string name="signin_login_button">Iniciar sesión</string>
    <string name="signin_register_button">Registrarse</string>
    <string name="signin_forgotten_pass">¿Has olvidado tu contraseña?</string>
    <string name="forgotten_pass_instructions">Introduce tu correo electrónico y te mandaremos las instrucciones necesarias para recuperar tu contraseña.</string>
    <string name="forgotten_pass_recovery_button">Recuperar contraseña</string>
    <string name="signup_title">Registro</string>
    <string name="signup_nickname">Nombre de usuario</string>
    <string name="signup_realname">Nombre completo</string>
    <string name="signup_birthdate">Fecha de nacimiento</string>
    <string name="signup_image">Foto de perfil</string>
    <string name="signup_country">Seleccione su país</string>
    <string name="signup_repass">Confirmar contraseña</string>
    <string name="signup_account">Crear cuenta</string>
    <string name="signup_eula">Aceptar los términos y condiciones</string>
    <string name="home_loading">Cargando…</string>
    <string name="games_title">Partidas</string>
    <string name="games_row">No se han encontrado partidas</string>
    <string name="games_country">País</string>
    <string name="exit_game_title">¿Seguro que desea salir de la partida?</string>
    <string name="exit_game_body">Puede guardarla y continuar después.</string>
    <string name="exit_game_yes">Guardar y salir</string>
    <string name="exit_game_no">Continuar partida</string>
    <string name="profile_title">Perfil</string>
    <string name="delete_title">¿Seguro que desea eliminar su cuenta?</string>
    <string name="delete_body">Se borrarán todos sus datos y no podrá recuperarlos.</string>
    <string name="delete_yes">Si</string>
    <string name="delete_no">No</string>
    <string name="friends_title">Amigos</string>
    <string name="ranking_title">Ranking</string>
    <string name="ranking_player">Jugador</string>
    <string name="store_title">Tienda</string>
    <string name="history_title">Historial</string>
    <string name="history_date">Fecha de\npartida</string>
    <string name="history_hour">Hora</string>
    <string name="history_winner">Ganador</string>
    <string name="history_moves">Nº movs</string>
    <string name="history_review">Revisar partida</string>
    <string name="review_mov">Mov</string>
    <string name="review_color">Color</string>
    <string name="review_origin">Origen</string>
    <string name="review_destination">Destino</string>
    <string name="exit_title">Cerrar sesión</string>
    <string name="exit_body">¿Estas seguro de que quieres cerrar sesión?</string>
</resources>