<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".home_fragments.Profile">

    <TextView
        android:id="@+id/textViewDeleteTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/delete_title"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textViewDeleteBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/delete_body"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewDeleteTitle"
        app:layout_constraintStart_toStartOf="@+id/textViewDeleteTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewDeleteTitle"/>

    <Button
        android:id="@+id/buttonDeleteNo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:onClick="onClickCancel"
        android:text="@string/delete_no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewDeleteTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewDeleteBody"/>

    <Button
        android:id="@+id/buttonDeleteYes"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:text="@string/delete_yes"
        android:textColor="?android:colorPrimary"
        android:backgroundTint="@color/white"
        android:onClick="onClickDelete"
        app:layout_constraintEnd_toStartOf="@+id/buttonDeleteNo"
        app:layout_constraintTop_toTopOf="@+id/buttonDeleteNo"/>
</androidx.constraintlayout.widget.ConstraintLayout>