<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Board">

    <TextView
        android:id="@+id/textViewExitGameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/exit_game_title"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textViewExitGameBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/exit_game_body"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewExitGameTitle"
        app:layout_constraintStart_toStartOf="@+id/textViewExitGameTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewExitGameTitle"/>

    <Button
        android:id="@+id/buttonExitGameYes"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/exit_game_yes"
        android:onClick="onClickExitGameYes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewExitGameTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewExitGameBody"/>

    <Button
        android:id="@+id/buttonExitGameNo"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/white"
        android:text="@string/exit_game_no"
        android:textColor="?android:colorPrimary"
        android:onClick="onClickExitGameNo"
        app:layout_constraintEnd_toStartOf="@+id/buttonExitGameYes"
        app:layout_constraintTop_toTopOf="@+id/buttonExitGameYes"/>
</androidx.constraintlayout.widget.ConstraintLayout>