<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayoutHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/neutral_95"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/review_mov"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/neutral_70"/>

        <LinearLayout
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="@string/ranking_player"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/neutral_70"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="@string/games_country"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/neutral_70"/>

        <TextView
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/review_color"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/neutral_70"/>

        <LinearLayout
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="@string/review_origin"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/neutral_70"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="@string/review_destination"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/neutral_70"
        app:layout_constraintEnd_toEndOf="@+id/linearLayoutHeader"
        app:layout_constraintStart_toStartOf="@+id/linearLayoutHeader"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutHeader"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/ranking_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayoutHeader"
        app:layout_constraintStart_toStartOf="@+id/linearLayoutHeader"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <LinearLayout
            android:id="@+id/linearLayoutTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:orientation="vertical"/>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>