<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <TextView
        android:id="@+id/textViewInstructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/forgotten_pass_instructions"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextForgottenEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/textViewInstructions"
        app:layout_constraintStart_toStartOf="@+id/textViewInstructions"
        app:layout_constraintTop_toBottomOf="@+id/textViewInstructions">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=".AUTOFILL_HINT_EMAIL_ADDRESS"
            android:hint="@string/signin_email"
            android:inputType="textEmailAddress"
            android:textColorHint="#78909C"
            android:textSize="21sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonRecovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:onClick="onClickRecovery"
        android:text="@string/forgotten_pass_recovery_button"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewInstructions"
        app:layout_constraintStart_toStartOf="@+id/textViewInstructions"
        app:layout_constraintTop_toBottomOf="@+id/editTextForgottenEmail"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>